correct some gap

--- a/css/style.css
+++ b/css/style.css
@@ -179,6 +179,7 @@ header {
     display: flex;
     flex-direction: row;
     margin: 15px 0;
+    gap: 15px;
 }
 
 #nav_filter button {
